--- a/game-tracker/estilo.css
+++ b/game-tracker/estilo.css
@@ -191,6 +191,7 @@ input[list='ordenar-lista'] {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .oferta .preco-normal {
@@ -269,4 +270,154 @@ input[list='ordenar-lista'] {
   text-decoration: none;
   line-height: 1.375rem;
   margin-bottom: 0.5rem;
+}
+
+@media (min-width: 769px) {
+  /* Fontes */
+  :root {
+    --big-title-font-size: 2.25rem;
+    --title-font-size: 1.5rem;
+    --subtitle-font-size: 1.125rem;
+    --link-font-size: 0.875rem;
+    --paragraph-font-size: 0.75rem;
+  }
+  /* Cabeçalho */
+  #header {
+    justify-content: left;
+  }
+
+  #header img {
+    display: block;
+    margin-left: 8.125rem;
+  }
+
+  /* Corpo da Página */
+  main {
+    margin-top: 5.9375rem;
+  }
+  main h2 {
+    font-size: var(--big-title-font-size);
+    line-height: 2.625rem;
+    text-align: left;
+    text-indent: 8.125rem;
+  }
+
+  /* Inputs */
+  .flex-input {
+    padding: 1.375rem 8.125rem 2.3125rem 8.125rem;
+  }
+
+  input[type='search'] {
+    background-position: 5.26px 5.26px;
+    width: 23.75rem;
+    height: 3.125rem;
+  }
+
+  .flex-ordenar {
+    align-items: center;
+    justify-content: center;
+    flex-flow: row;
+  }
+
+  .flex-ordenar label {
+    font-size: var(--subtitle-font-size);
+    line-height: 1.3125rem;
+    margin-right: 1.25rem;
+  }
+
+  input[list='ordenar-lista'] {
+    text-align: center;
+    text-indent: 0;
+    width: 11.25rem;
+    height: 3.125rem;
+    margin-top: 0;
+  }
+
+  /* Cards de Jogos em Promoção*/
+  #jogos-lista {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .oferta {
+    height: 15.6875rem;
+    width: 23.75rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    margin: 0 0.625rem 1.25rem 0.625rem;
+  }
+
+  .oferta header {
+    top: 9.625rem;
+  }
+
+  .oferta .titulo-jogo {
+    text-indent: 1rem;
+    line-height: 1.75rem;
+    max-width: 22rem;
+  }
+
+  .oferta figure {
+    height: 9.1875rem;
+    width: 23.75rem;
+    border-radius: 8px 8px 0px 0px;
+  }
+
+  .oferta img {
+    width: 23.75rem;
+  }
+
+  .oferta div {
+    padding: 0 1rem 1rem 1rem;
+    width: 23.75rem;
+  }
+
+  .oferta .detalhes-jogo {
+    width: 7.25rem;
+    height: 2.4375rem;
+    border-radius: 8px;
+  }
+
+  .oferta .desconto-jogo {
+    width: 5.25rem;
+    height: 2.4375rem;
+    border-radius: 8px;
+  }
+
+  /* Botão "Carregar Mais" */
+  .button-wrapper {
+    margin: 1.25rem auto 2.75rem auto;
+  }
+
+  .button-wrapper .more-content {
+    font-size: var(--subtitle-font-size);
+    width: 23.75rem;
+  }
+
+  /* Rodapé */
+  #footer {
+    padding: 3.8125rem 8.125rem 3.8125rem 8.125rem;
+  }
+
+  #footer p {
+    font-size: var(--link-font-size);
+    text-align: left;
+    line-height: 1.5625rem;
+    margin: 2.0625rem 0 1.25rem 0;
+  }
+
+  #footer .about-links {
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 8.125rem 0 8.125rem;
+  }
+
+  #footer .about-links a {
+    display: block;
+    line-height: 1.5625rem;
+    margin-bottom: 0;
+    margin-right: 2.875rem;
+  }
 }
