--- a/adm/src/app/app.component.html
+++ b/adm/src/app/app.component.html
@@ -1,9 +1,11 @@
 <header>
   <div class="header-container">
-    <img src="../assets/imgs/logo.png">
-   
+    <img src="../assets/imgs/logo.png" />
+
     <nav>
-      <a routerLink="/listaofertas" routerLinkActive="active-link">Nossas Ofertas</a>
+      <a routerLink="/nossasofertas" routerLinkActive="active-link"
+        >Nossas Ofertas</a
+      >
     </nav>
   </div>
 </header>
