--- a/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
+++ b/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
@@ -24,7 +24,21 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-row
+        routerLink="/cadastroofertas"
+        (click)="editaOferta(row)"
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
     </table>
+
+    <button
+      mat-raised-button
+      color="primary"
+      routerLink="/cadastroofertas"
+      (click)="addOferta()"
+    >
+      Criar Oferta
+    </button>
   </div>
 </section>
