--- a/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.scss
+++ b/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.scss
@@ -1,12 +1,19 @@
 section {
- 
-    .container {
-        max-width: 1200px;
-        width: 100%;        
-        
-        table {
-            width: 100%;
-            border: 1px solid #e0e0e0;
-        }
+  .container {
+    max-width: 1200px;
+    width: 100%;
+
+    table {
+      width: 100%;
+      border: 1px solid #e0e0e0;
     }
+
+    .mat-row:hover .mat-cell {
+      background-color: rgba(0, 0, 0, 0.075);
+    }
+
+    button {
+      margin-top: 10px;
+    }
+  }
 }
