--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.scss
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.scss
@@ -1,19 +1,25 @@
 section {
-  
-    .grid {
-        max-width: 1200px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 15px;
-        grid-row-gap: 0px;
-    }
+  .grid {
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 0px;
+  }
 
-    .campos {
-        padding: 10px;
-        padding-left: 0;
+  .campos {
+    padding: 10px;
+    padding-left: 0;
 
-        mat-form-field {
-            width: 100%;
-        }
+    mat-form-field {
+      width: 100%;
     }
+  }
+
+  .erro {
+    font-size: small;
+    color: red;
+    margin: 0;
+    padding: 0;
+  }
 }
