--- a/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
+++ b/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Nossas Ofertas</h2>
 
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table [dataSource]="dataSource2">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
