--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -1,17 +1,12 @@
 <section>
   <div class="container">
     <h2>Cadastro de Ofertas</h2>
-    <form [formGroup]="cadastroForm">
+    <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
       <div class="grid">
         <div class="campos">
           <mat-form-field appearance="outline">
             <mat-label>ID</mat-label>
-            <input
-              matInput
-              placeholder="ID do jogo"
-              [value]="editaOferta.id"
-              formControlName="id"
-            />
+            <input matInput placeholder="ID do jogo" formControlName="id" />
           </mat-form-field>
           <div class="erro" *ngIf="cadastroForm.get('id').errors?.required">
             *Campo obrigatório
@@ -27,7 +22,6 @@
             <input
               matInput
               placeholder="Título do jogo"
-              [value]="editaOferta.titulo"
               formControlName="titulo"
             />
           </mat-form-field>
@@ -42,12 +36,20 @@
             <input
               matInput
               placeholder="Preço do jogo"
-              [value]="editaOferta.preco"
               formControlName="preco"
             />
           </mat-form-field>
           <div class="erro" *ngIf="cadastroForm.get('preco').errors?.required">
             *Campo obrigatório
+          </div>
+          <div class="erro" *ngIf="cadastroForm.get('preco').errors?.pattern">
+            *Formato de número inválido. Ex: "99.99"
+          </div>
+          <div
+            class="erro"
+            *ngIf="cadastroForm.get('preco').errors?.biggerThan"
+          >
+            *Preço deve ser maior que zero
           </div>
         </div>
 
@@ -57,7 +59,6 @@
             <input
               matInput
               placeholder="Preço com desconto"
-              [value]="editaOferta.precoDesconto"
               formControlName="precoDesconto"
             />
           </mat-form-field>
@@ -67,17 +68,33 @@
           >
             *Campo obrigatório
           </div>
+          <div
+            class="erro"
+            *ngIf="cadastroForm.get('precoDesconto').errors?.pattern"
+          >
+            *Formato de número inválido. Ex: "99.99"
+          </div>
+          <div
+            class="erro"
+            *ngIf="cadastroForm.get('precoDesconto').errors?.isSmaller"
+          >
+            *Preço com desconto deve ser menor que o preço atual
+          </div>
+          <div
+            class="erro"
+            *ngIf="cadastroForm.get('precoDesconto').errors?.biggerThan"
+          >
+            *Preço deve ser maior que zero
+          </div>
         </div>
 
         <div class="campos">
           <mat-form-field appearance="outline">
             <mat-label>Loja</mat-label>
             <mat-select>
-              <mat-option
-                *ngFor="let loja of lojas; let i = index"
-                [value]="i + 1"
-                >{{ loja.nome }}</mat-option
-              >
+              <mat-option *ngFor="let loja of lojas; let i = index">
+                {{ loja.nome }}
+              </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -89,17 +106,16 @@
           </mat-form-field>
         </div>
       </div>
+      <div class="campos">
+        <button
+          type="submit"
+          mat-raised-button
+          color="primary"
+          [disabled]="cadastroForm.status !== 'VALID'"
+        >
+          Salvar
+        </button>
+      </div>
     </form>
-    <div class="campos">
-      <button
-        type="submit"
-        mat-raised-button
-        color="primary"
-        [disabled]="cadastroForm.status !== 'VALID'"
-        (click)="novaOferta()"
-      >
-        Salvar
-      </button>
-    </div>
   </div>
 </section>
