Nova validacao no campo ID (cadastro-ofertas)
Foi implementada a funcao que confere se uma determinada ID já foi previamente utilizada

--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -14,6 +14,9 @@
           <div class="erro" *ngIf="cadastroForm.get('id').errors?.pattern">
             *Somente Números
           </div>
+          <div class="erro" *ngIf="cadastroForm.get('id').errors?.checkId">
+            *ID já existe: atribua outro valor
+          </div>
         </div>
 
         <div class="campos">
