Formulario de cadastro atualizado (cadastroofertas)
Foram adicionados lojaId (com validacao de obrigatorio) e descricao ao submeter o formulario

--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -94,8 +94,8 @@
         <div class="campos">
           <mat-form-field appearance="outline">
             <mat-label>Loja</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let loja of lojas; let i = index">
+            <mat-select formControlName="lojaId">
+              <mat-option *ngFor="let loja of lojas" [value]="loja.id">
                 {{ loja.nome }}
               </mat-option>
             </mat-select>
@@ -105,7 +105,7 @@
         <div class="campos">
           <mat-form-field appearance="outline">
             <mat-label>Descrição</mat-label>
-            <input matInput placeholder="" />
+            <input matInput placeholder="" formControlName="descricao" />
           </mat-form-field>
         </div>
       </div>
