localStorage centralizado no cadastro.service
As requisicoes ao localStorage foram centralizadas no cadastro.service.
ID Input (cadastrooferta) foi mudado para tipo number

--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -6,7 +6,12 @@
         <div class="campos">
           <mat-form-field appearance="outline">
             <mat-label>ID</mat-label>
-            <input matInput placeholder="ID do jogo" formControlName="id" />
+            <input
+              type="number"
+              matInput
+              placeholder="ID do jogo"
+              formControlName="id"
+            />
           </mat-form-field>
           <div class="erro" *ngIf="cadastroForm.get('id').errors?.required">
             *Campo obrigatório
