submissao de formulario concluida
Foram feitas validacoes ao submeter formulario (onSubmit()).
Interface oferta.ts foi atualizada.
Correcao da tabela nossasofertas (element.precoDesconto)

--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -105,6 +105,9 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <div class="erro" *ngIf="cadastroForm.get('lojaId').errors?.required">
+            *Campo obrigatório
+          </div>
         </div>
 
         <div class="campos">
