--- a/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
+++ b/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.html
@@ -20,7 +20,9 @@
 
       <ng-container matColumnDef="precoDesconto">
         <th mat-header-cell *matHeaderCellDef>Preço Desconto</th>
-        <td mat-cell *matCellDef="let element">$ {{ element.preco }}</td>
+        <td mat-cell *matCellDef="let element">
+          $ {{ element.precoDesconto }}
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
