Modo "edicao de ofertas" implementado
Funcao onSubmit() atualizada para modo de edicao de oferta.
Funcao atualizaOferta() foi criada para popular os dados do formulario ao editar uma oferta.
Funcoes sem utilidade foram excluidas

--- a/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
+++ b/adm/src/app/pages/cadastro-ofertas/cadastro-ofertas.component.html
@@ -51,7 +51,7 @@
             *Campo obrigatório
           </div>
           <div class="erro" *ngIf="cadastroForm.get('preco').errors?.pattern">
-            *Formato de número inválido. Ex: "99.99"
+            *Formato de número inválido. Ex: "99,99"
           </div>
           <div
             class="erro"
@@ -80,7 +80,7 @@
             class="erro"
             *ngIf="cadastroForm.get('precoDesconto').errors?.pattern"
           >
-            *Formato de número inválido. Ex: "99.99"
+            *Formato de número inválido. Ex: "99,99"
           </div>
           <div
             class="erro"
@@ -124,7 +124,7 @@
           color="primary"
           [disabled]="cadastroForm.status !== 'VALID'"
         >
-          Salvar
+          {{ editaOferta === true ? "Atualizar" : "Salvar" }}
         </button>
       </div>
     </form>
