--- a/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.scss
+++ b/adm/src/app/pages/nossas-ofertas/nossas-ofertas.component.scss
@@ -10,6 +10,7 @@ section {
 
     .mat-row:hover .mat-cell {
       background-color: rgba(0, 0, 0, 0.075);
+      cursor: pointer;
     }
 
     button {
