--- a/game-tracker/estilo.css
+++ b/game-tracker/estilo.css
@@ -46,7 +46,7 @@ body {
   height: 3.125rem;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 20;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,19 +91,19 @@ input[type='search'] {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.flex-ordenar {
+.ordenar {
   display: flex;
   flex-flow: column;
-}
-
-.flex-ordenar label {
   font-size: var(--paragraph-font-size);
-  text-align: center;
+  font-style: normal;
   line-height: 0.75rem;
-  vertical-align: middle;
+  text-align: center;
 }
 
-input[list='ordenar-lista'] {
+.ordenar select {
+  display: block;
+  position: relative;
+  z-index: 5;
   background-color: var(--primario);
   color: var(--texto);
   font-size: var(--subtitle-font-size);
@@ -115,6 +115,50 @@ input[list='ordenar-lista'] {
   border-radius: 8px;
   margin-top: 0.25rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+}
+
+.ordenar::after {
+  content: '';
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent;
+  border-top-color: var(--texto);
+  display: inline-block;
+  border-radius: 2px;
+  position: absolute;
+  right: 17px;
+  z-index: 10;
+  top: 123px;
+}
+
+.ordenar .ordenar-opcoes {
+  display: block;
+  list-style: none;
+  position: absolute;
+  top: 6.875rem;
+  z-index: 2;
+  width: 7.625rem;
+  height: 11.4375rem;
+  background-color: var(--primario);
+  padding-top: 2.25rem;
+  padding-bottom: 0.4375rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.ordenar .ordenar-opcoes li {
+  color: var(--texto);
+  font-size: var(--subtitle-font-size);
+  font-weight: var(--font-weight-2);
+  text-align: left;
+  line-height: 1rem;
+  text-indent: 11.5px;
+  padding: 0.5625rem 0 0.625rem 0;
 }
 
 /* Cards de Jogos em Promoção*/
@@ -313,24 +357,35 @@ input[list='ordenar-lista'] {
     height: 3.125rem;
   }
 
-  .flex-ordenar {
+  .ordenar {
+    position: relative;
     align-items: center;
     justify-content: center;
     flex-flow: row;
-  }
-
-  .flex-ordenar label {
     font-size: var(--subtitle-font-size);
     line-height: 1.3125rem;
-    margin-right: 1.25rem;
   }
 
-  input[list='ordenar-lista'] {
-    text-align: center;
-    text-indent: 0;
+  .ordenar select {
+    text-align: left;
+    text-indent: 1.0625rem;
     width: 11.25rem;
     height: 3.125rem;
+    margin-left: 1.25rem;
     margin-top: 0;
+  }
+
+  .ordenar::after {
+    position: relative;
+    top: 3px;
+    right: 30px;
+  }
+
+  .ordenar .ordenar-opcoes {
+    position: absolute;
+    width: 11.25rem;
+    top: 20px;
+    right: 10px;
   }
 
   /* Cards de Jogos em Promoção*/
